crates/rpkl-runtime/tests/snapshots/snapshot_tests__datasize_to_unit_comprehensive2.snap
---
source: crates/rpkl-runtime/tests/snapshot_tests.rs
expression: eval_pkl(source)
---
{
  "r1": "1000tb",
  "r2": "1000000gb",
  "r3": "1000000000mb",
  "r4": "1000000000000kb",
  "r5": "1000000000000000b",
  "r6": "1024tib",
  "r7": "1048576gib",
  "r8": "1073741824mib",
  "r9": "1099511627776kib",
  "r10": "1125899906842624b",
  "r11": "500000kb",
  "r12": "0.46566128730773926gib"
}
