crates/rpkl-runtime/tests/snapshots/snapshot_tests__deep_class_hierarchy.snap
---
source: crates/rpkl-runtime/tests/snapshot_tests.rs
assertion_line: 2129
expression: eval_pkl(source)
---
{
  "obj": {
    "x": 10,
    "y": 2,
    "z": 3
  }
}
