crates/rpkl-runtime/tests/snapshots/snapshot_tests__duration_comparison.snap
---
source: crates/rpkl-runtime/tests/snapshot_tests.rs
expression: eval_pkl(source)
---
{
  "r1": true,
  "r2": false,
  "r3": true,
  "r4": true,
  "r5": true,
  "r6": true
}
