crates/rpkl-runtime/tests/snapshots/snapshot_tests__duration_is_between.snap
---
source: crates/rpkl-runtime/tests/snapshot_tests.rs
expression: eval_pkl(source)
---
{
  "r1": true,
  "r2": true,
  "r3": true,
  "r4": true,
  "r5": true,
  "r6": false,
  "r7": false
}
