crates/rpkl-runtime/tests/snapshots/snapshot_tests__duration_negation.snap
---
source: crates/rpkl-runtime/tests/snapshot_tests.rs
expression: eval_pkl(source)
---
{
  "r1": "-1h",
  "r2": "-30min",
  "r3": true
}
